syntax = "proto3";


package ihtkas.goexamples.gomeet22;

// GO_ROOT="$(go env GOPATH)/src"
// protoc --go-grpc_out=$GO_ROOT --go_out=$GO_ROOT ./go-meet-bangalore-2022/protos/service.proto
option go_package = "github.com/ihtkas/go-examples/go-meet-bangalore-2022/gen/events;eventspb";

service EventsService {
  rpc PublishEvent (stream PublishEventRequest) returns (stream PublishEventResponse) {}
}


message PublishEventRequest {
  bytes event = 1;
}

message PublishEventResponse {}